# world-model-trajectories

./: .gitignore  README.md
.github/workflows/: e2e.yml  pages.yml
crate/: Cargo.toml
crate/src/: lib.rs
e2e/: e2e.mjs  package.json
site/: app.js  index.html  style.css
site/pkg/: package.json  wmt_core.d.ts  wmt_core.js  wmt_core_bg.wasm  wmt_core_bg.wasm.d.ts
