[package]
name = "wmt-core"
version = "0.1.0"
edition = "2021"
description = "World-model-trajectories: a propositional consistency engine for human+LLM semiformalized claim sets. Exact contradiction (minimal conflict) + forced-consequence detection."
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
